# DiagramGenerator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml
.github/workflows/: ci.yml  deploy.yml
scripts/: release_version.ps1
src/: cli.rs  logic.rs  main.rs  module.rs  style.css  svg.rs
src/items/: enums.rs  functions.rs  impl_blocks.rs  mod.rs  module.rs  structs.rs
src/tests/: logic_tests.rs  main_tests.rs  mod.rs
