[package]
name = "diagram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0.14"
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tinytemplate = "1.2.1"
uuid = { version = "1.11", features = ["v4"] }
walkdir = "2.5"
