[package]
name = "diagen"
description = "A tool for generating a diagram for a Rust project based on its source code."
repository = "https://github.com/bircni/DiagramGenerator"
version = "0.1.0"
edition = "2024"
authors = ["bircni", "fabus1184"]
readme = "README.md"
keywords = ["diagram", "generator", "rust", "cli"]
exclude = ["src/tests/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.5.32", features = ["derive"] }
itertools = "0.14"
log = "0.4.27"
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12.2"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tinytemplate = "1.2.1"

[lints.rust]
unsafe_code = "deny"
deprecated = "warn"
elided_lifetimes_in_paths = "warn"
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
pedantic = "warn"
nursery = "warn"

# Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
create_dir = "warn"
clone_on_ref_ptr = "warn"
# expect_used = "warn"
missing_assert_message = "warn"
panic_in_result_fn = "warn"
str_to_string = "warn"
todo = "warn"
unwrap_used = "warn"
unimplemented = "warn"
wildcard_enum_match_arm = "warn"

[package.metadata.cargo-machete]
ignored = ["proc-macro2"]
